# rusty-book-manager

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yaml
.github/workflows/: ci.yaml
.sqlx/: query-0ce12445c8df4d39dc51c0e1c38d6eed19c33812126937c6bc936399815e07da.json  query-284ea09300429f2628d39463fbb8e5e38a30be91bbe75778cfc520ef8308b61c.json  query-30541c28ac2572a4d0b28798c5b31126802a628845b23e4545844c22129edc22.json  query-374b26b91492ff0f6a922ad0c788c750b870be613e5098f1fb13900d64ebf76d.json  query-4107ec403718bb1720326a1317be45fd247cd03039e26d93ab01043da050d1ad.json  query-4d26e1e127f8b627c3df283cdbed2339d18419f7a6521cd4b05f0167f74e55e4.json  query-7e204436a451415cc9df8c836c952a95fd89c5759af216f9f6cdb56aae14b896.json  query-8645e8e08027b81c1912496edeb3a0ef9af9d016f535461242ee0a2a43b3f88f.json  query-96308bc03d03006b7634d2c254f7142290915932d98e275f5a2e6058995e5bac.json  query-a3cfc06fd51b1ecbe61f572dcb684de2a931346b0c74ce9d5eb40668351a0d12.json  query-aed2343e8b7334fac514f3da17413b96b8503f29ecb9db38207d27e4d990127b.json  query-b1559dea171981665f4a76a94040148d064f5065a2ef228b0bcd1f5a4161cb41.json  query-c41eac9e222ca162ea82ed847cd51c25ad6319735388717b0db1518f344059a2.json  query-de744f0e1b476aa88a5521288192277cbc11b3cfe6b41c9d75eee865dc9506e6.json
adapter/migrations/: 20250731134159_start.down.sql  20250731134159_start.up.sql
adapter/src/: database.rs  redis.rs
adapter/src/database/model/: auth.rs  book.rs
adapter/src/repository/: book.rs  checkout.rs  health.rs  user.rs
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  user.rs
api/src/model/: book.rs  user.rs
api/src/route/: book.rs  health.rs  user.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
kernel/src/repository/: auth.rs  book.rs
registry/src/: lib.rs
shared/src/: error.rs
